[package]
name = "darwinia-sync"
version = "0.1.1"
authors = ["Xavier Lau <c.estlavie@icloud>"]
description = "Darwinia Maintain Tool"
edition = "2018"
license = "GPL-3.0"
homepage = "https://darwinia.network/"
repository = "https://github.com/AurevoirXavier/darwinia-sync/"

[dependencies]
ctrlc = { version = "3.1.4", features = ["termination"] }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.8" }
pretty_env_logger = { version = "0.4.0" }
regex = { version = "1.3.7" }
sysinfo = { version = "0.14.2" }
